@@ -32,10 +32,17 @@
  */
 #ifdef EXPORT_PNG
 
+#ifdef HAVE_UNISTD_H
+#include <unistd.h>
+#endif
+#include <math.h>
+
 #include <gdk-pixbuf/gdk-pixbuf.h>
 #include <png.h>
 
 #include "exportimage.h"
+#include "draw.h"
+#include "gerbv_screen.h"
 
 /* Function prototypes */
 static gboolean pixbuf_to_file_as_png (GdkPixbuf *pixbuf, char *filename);
@@ -45,18 +52,89 @@ png_export(GdkPixmap* imagetosave, char* filename)
 {
 	GdkPixbuf *tempPixBuf=NULL;
 	GdkColormap *colormap=NULL; 
-	int width = 0, height = 0;
+	GdkPixmap *curr_pixmap = NULL, *out_pixmap = NULL, *clipmask = NULL;
+	GdkGC *gc = NULL;
+	int width = 0, height = 0, i;
+	double dmin_x, dmin_y, dmax_x, dmax_y;
 	gboolean result = FALSE;
-
+	
 	colormap = gdk_colormap_get_system();
 	if (colormap == NULL)
 	    return FALSE;
+	
+	if (imagetosave) {
+	    gdk_window_get_size(imagetosave, &width, &height);
+	    tempPixBuf = gdk_pixbuf_get_from_drawable(tempPixBuf, imagetosave, 
+						      colormap, 
+						      0, 0, 0, 0, 
+						      width, height);
+	} else {
 
-	gdk_window_get_size(imagetosave, &width, &height);
+	    /*
+	     * Max and min of image gives the size of the image.
+	     */
+	    dmax_x = screen.gerber_bbox.x2;
+	    dmax_y = screen.gerber_bbox.y2;
+	    dmin_x = screen.gerber_bbox.x1;
+	    dmin_y = screen.gerber_bbox.y1;
+	    
+	    /*
+	     * Width and height to scaled full size.
+	     */
+	    width = (int)floor((dmax_x - dmin_x) * 
+			       (double)screen.scale);
+	    height = (int)floor((dmax_y - dmin_y) * 
+			    (double)screen.scale);
+	    
+	    /*
+	     * Allocate the pixmap and the clipmask (a one pixel pixmap)
+	     */
+	    gc = gdk_gc_new(screen.drawing_area->window);
+	    curr_pixmap = gdk_pixmap_new(screen.drawing_area->window, width, height,  -1);
+	    out_pixmap = gdk_pixmap_new(screen.drawing_area->window, width, height,  -1);
+	    clipmask = gdk_pixmap_new(screen.drawing_area->window, width, height,  1);
+	    
+	    /* 
+	     * This now allows drawing several layers on top of each other.
+	     * Higher layer numbers have higher priority in the Z-order. 
+	     */
+	    for(i = 0; i < MAX_FILES; i++) {
+		if (GTK_TOGGLE_BUTTON(screen.layer_button[i])->active &&
+		    screen.file[i]) {
+		
+		    /*
+		     * Fill up image with all the foreground color. Excess
+		     * pixels will be removed by clipmask.
+		     */
+		    gdk_gc_set_foreground(gc, screen.file[i]->color);
+		    gdk_draw_rectangle(curr_pixmap, gc, TRUE, 0, 0, -1, -1);
+		    
+		    /*
+		     * Translation is to get it inside the allocated pixmap,
+		     * which is not always centered perfectly for GTK/X.
+		     */
+		    image2pixmap(&clipmask, screen.file[i]->image, screen.scale, 
+				 -dmin_x*screen.scale,
+				 dmax_y*screen.scale,
+				 screen.file[i]->image->info->polarity);
+		    /* 
+		     * Set clipmask and draw the clipped out image onto the
+		     * screen pixmap. Afterwards we remove the clipmask, else
+		     * it will screw things up when run this loop again.
+		     */
+		    gdk_gc_set_clip_mask(gc, clipmask);
+		    gdk_gc_set_clip_origin(gc, 0, 0);
+		    gdk_draw_pixmap(out_pixmap, gc, curr_pixmap, 0,	0,
+				    0, 0, -1, -1);
+		    gdk_gc_set_clip_mask(gc, NULL);
+		}
+	    }
+	    tempPixBuf = gdk_pixbuf_get_from_drawable(tempPixBuf, out_pixmap,
+						      colormap,
+						      0, 0, 0, 0, 
+						      width, height);
+	}
 
-	tempPixBuf = 
-	    gdk_pixbuf_get_from_drawable(tempPixBuf, imagetosave, colormap,
-					 0, 0, 0, 0, width, height);
 	if (tempPixBuf == NULL)
 	    return FALSE;
 
@@ -64,6 +142,10 @@ png_export(GdkPixmap* imagetosave, char* filename)
 	
 	gdk_pixbuf_unref(tempPixBuf);
 	gdk_colormap_unref(colormap);
+	if (curr_pixmap) gdk_pixmap_unref(curr_pixmap);
+	if (out_pixmap) gdk_pixmap_unref(out_pixmap);
+	if (clipmask) gdk_pixmap_unref(clipmask);
+	if (gc) gdk_gc_unref(gc);
 
 	return result;
 }
